--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A basic started boilerplate project for node",
   "main": "index.js",
   "scripts": {
-    "dev": " nodemon src/index.js"
+    "dev": " nodemon src/index.js",
+    "seed": "nodemon src/prisma/seed.js"
   },
   "author": "Sanket",
   "license": "ISC",
@@ -13,9 +14,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^3.0.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
     "prisma": "^5.19.1",
     "winston": "^3.8.2"
